--- a/ejercicios/hoja4.tex
+++ b/ejercicios/hoja4.tex
@@ -1,4 +1,5 @@
-\documentclass[11pt,heading,asymmetric,exercises,withsolutions]{uniexer}
+\documentclass[11pt,heading,asymmetric,exercises,%withsolutions
+]{uniexer}
 %\documentclass[11pt,heading,asymmetric,exercises]{uniexer}
 
 \usepackage{a4wide}
@@ -42,6 +43,7 @@
 \exercita{load}{programacion.entrenamiento.condicionales.Multiplicacion}[solPython]
 \exercita{load}{recreativos.dibujos-asteriscos}[duplicar,tablero1,circulo,sol]
 \exercita{load}{recreativos.adivino}[*,solC]
+\exercita{load}{matematicas.algebra.diofantica}[*]
 \exercita{load}{programacion.entrenamiento.bonitoTriangulo}[*,solPythonString]
 \exercita{load}{graficos.espectro-circunferencia{label=*}}[solPascal{en-funcion=1}]
 \exercita{load}{matematicas.aritmetica.cubosNicomaco{label=*}}[solPythonFun]
