--- a/ejercicios/hoja3.tex
+++ b/ejercicios/hoja3.tex
@@ -42,10 +42,12 @@
 \exercita{load}{recreativos.suma-marte}[solucion]
 %\exercita{load}{graficos.espectro-circunferencia{label=*}}[solPascal]
 %\exercita{load}{matematicas.aritmetica.cubosNicomaco{label=*}}[solPython]
-\exercita{load}{matematicas.algebra.diofantica}[descSumas,solC]
+%\exercita{load}{matematicas.algebra.diofantica}[descSumas,solC]
 \exercita{load}{matematicas.analisis.aproximacionesPi}[viete,wallis,leibniz,borwein,solPascal,Borwein]
 \exercita{load}{programacion.estructurasDatos.array.calculosArrayEnteros}[*,solPython]
 \exercita{load}{matematicas.aritmetica.primos.generaPrimos}[siguientePrimo,primerosPrimos,solWithFunctions]
+\exercita{load}{recreativos.duelosOrdenacionNuv}[practica]
+
 %\exercita{load}{matematicas.aritmetica.primos.eratostenes{sinProcedimientos}}[*,solPascal]
 %\exercita{load}{matematicas.aritmetica.primos.descomposicion-factores-primos}[ejecucionSimple,solPascal]
 %\exercita{load}{matematicas.algebra.polinomios.evaluacion}[pesos-crecientes,pesos-decrecientes,ultNumero,pisHorner,sol]
