mas cambios en las búsquedas

--- a/Búsquedas.ipynb
+++ b/Búsquedas.ipynb
@@ -297,7 +297,7 @@
       "        med=len(l)/2", 
       "        if l[med]>=e:", 
       "            result,pos=pos_ord_bin_rec1(l[:med],e)", 
-      "            result=(l[med]==e)", 
+      "            result=(l[med]==e or result)", 
       "        else:", 
       "            result,pos=pos_ord_bin_rec1(l[med+1:],e)", 
       "            pos=pos+med+1", 
@@ -337,7 +337,7 @@
       "        med=(i+j)/2", 
       "        if l[med]>=e:", 
       "            result,pos=pos_ord_bin_rec2(l,i,med-1,e)", 
-      "            result=(l[med]==e)", 
+      "            result=(l[med]==e or result)", 
       "        else:", 
       "            result,pos=pos_ord_bin_rec2(l,med+1,j,e)", 
       "    return result,pos", 
@@ -389,7 +389,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "def pos_ord_bin_iter(l,e):", 
       "    i=0", 
@@ -451,7 +451,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 121
+     "prompt_number": 17
     }, 
     {
      "cell_type": "code", 
@@ -508,11 +508,11 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 124
+     "prompt_number": 18
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "l=[3,2,1,45,10,45,123]", 
       "ordena_inser(l)"
@@ -544,43 +544,405 @@
      "collapsed": true, 
      "input": [
       "def ord_burbuja(l):", 
-      "    for k in range(len(l)-1):", 
+      "    cambiado=True", 
+      "    k=0", 
+      "    while k<len(l) and cambiado:", 
+      "        cambiado=False", 
       "        for i in range(len(l)-k-1):", 
       "            if l[i+1]<l[i]:", 
       "                l[i],l[i+1]=l[i+1],l[i]", 
+      "                cambiado=True", 
       "            ", 
       "        "
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 127
+     "prompt_number": 19
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "l=[3,2,1,45,10,45,123]", 
       "ord_burbuja(l)"
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 128
+     "prompt_number": 7
     }, 
     {
      "cell_type": "code", 
      "collapsed": false, 
-     "input": [], 
+     "input": [
+      "l"
+     ], 
      "language": "python", 
      "outputs": [
       {
        "output_type": "pyout", 
-       "prompt_number": 101, 
+       "prompt_number": 8, 
        "text": [
         "[1, 2, 3, 10, 45, 45, 123]"
        ]
       }
      ], 
-     "prompt_number": 101
+     "prompt_number": 8
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": true, 
+     "input": [
+      "def mezcla(l,i,j,med):", 
+      "    #l ordenada en i...med-1 y med...j", 
+      "    #ordena l entre i..j", 
+      "    aux=[]", 
+      "    in1=i", 
+      "    in2=med", 
+      "    while in1<=med-1 and in2<=j:", 
+      "        if l[in1]<l[in2]:", 
+      "            aux.append(l[in1])", 
+      "            in1=in1+1", 
+      "        else:", 
+      "            aux.append(l[in2])", 
+      "            in2=in2+1", 
+      "    for k in range(in1,med):", 
+      "        aux.append(l[k])", 
+      "    for k in range(in2,j+1):", 
+      "        aux.append(l[k])", 
+      "    for k in range(len(aux)):", 
+      "        l[i+k]=aux[k]"
+     ], 
+     "language": "python", 
+     "outputs": [], 
+     "prompt_number": 20
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": true, 
+     "input": [
+      "l=[1,5,8,10,4,7,9,11,12]", 
+      "mezcla(l,0,8,4)"
+     ], 
+     "language": "python", 
+     "outputs": [], 
+     "prompt_number": 17
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "l"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 18, 
+       "text": [
+        "[1, 4, 5, 7, 8, 9, 10, 11, 12]"
+       ]
+      }
+     ], 
+     "prompt_number": 18
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": true, 
+     "input": [
+      "def ordena_mezcla(l,i,j):", 
+      "    if j>i:", 
+      "        medio=(i+j)/2+1", 
+      "        ordena_mezcla(l,i,medio-1)", 
+      "        ordena_mezcla(l,medio,j)", 
+      "        mezcla(l,i,j,medio)"
+     ], 
+     "language": "python", 
+     "outputs": [], 
+     "prompt_number": 21
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": true, 
+     "input": [
+      "l=[8,5,2,10,1,3]", 
+      "ordena_mezcla(l,0,len(l)-1)"
+     ], 
+     "language": "python", 
+     "outputs": [], 
+     "prompt_number": 26
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "l"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 27, 
+       "text": [
+        "[1, 2, 3, 5, 8, 10]"
+       ]
+      }
+     ], 
+     "prompt_number": 27
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "def pivotar(l,i,j):", 
+      "    #recoloca los elementos de l entre i..j", 
+      "    #coloca l[i] en la posicion p ", 
+      "    #los menores que l[i] van en las posiciones i..p-1, y los mayores entre p+1..j", 
+      "    e=l[i]", 
+      "    p=i", 
+      "    b=j", 
+      "    while b>p:", 
+      "        if l[p+1]>e:", 
+      "            l[p+1],l[b]=l[b],l[p+1]", 
+      "            b=b-1", 
+      "        elif l[p+1]<e:", 
+      "             l[p],l[p+1]=l[p+1],l[p]", 
+      "             p=p+1", 
+      "        else:", 
+      "            p=p+1", 
+      "    return p"
+     ], 
+     "language": "python", 
+     "outputs": [], 
+     "prompt_number": 22
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "l=[7,2,8,9,1,1,7]", 
+      "pivotar(l,0,len(l)-1)"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 3, 
+       "text": [
+        "4"
+       ]
+      }
+     ], 
+     "prompt_number": 3
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "l"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 4, 
+       "text": [
+        "[2, 7, 1, 1, 7, 9, 8]"
+       ]
+      }
+     ], 
+     "prompt_number": 4
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "pivotar(l,0,3)"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 5, 
+       "text": [
+        "2"
+       ]
+      }
+     ], 
+     "prompt_number": 5
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "l"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 6, 
+       "text": [
+        "[1, 1, 2, 7, 7, 9, 8]"
+       ]
+      }
+     ], 
+     "prompt_number": 6
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "pivotar(l,5,len(l)-1)"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 7, 
+       "text": [
+        "6"
+       ]
+      }
+     ], 
+     "prompt_number": 7
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "l"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 8, 
+       "text": [
+        "[1, 1, 2, 7, 7, 8, 9]"
+       ]
+      }
+     ], 
+     "prompt_number": 8
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": true, 
+     "input": [
+      "def quicksort(l,i,j):", 
+      "    if i<j:", 
+      "        p=pivotar(l,i,j)", 
+      "        quicksort(l,i,p-1)", 
+      "        quicksort(l,p+1,j)"
+     ], 
+     "language": "python", 
+     "outputs": [], 
+     "prompt_number": 23
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": true, 
+     "input": [
+      "l=[7,4,7,10,1,2,3,9,3,5]", 
+      "quicksort(l,0,len(l)-1)"
+     ], 
+     "language": "python", 
+     "outputs": [], 
+     "prompt_number": 12
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "l"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 13, 
+       "text": [
+        "[1, 2, 3, 3, 4, 5, 7, 7, 9, 10]"
+       ]
+      }
+     ], 
+     "prompt_number": 13
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "import random", 
+      "import time", 
+      "def aleatoria(n,max):", 
+      "    result=[0]*n", 
+      "    for i in range(n):", 
+      "        result[i]=random.randint(0,max)", 
+      "    return result", 
+      "l=aleatoria(100000,100000)", 
+      "l1=l[:]", 
+      "t0=time.time()", 
+      "ordena_sel(l1)", 
+      "print \"seleccion:\",time.time()-t0", 
+      "l1=l[:]", 
+      "t0=time.time()", 
+      "ordena_inser(l1)", 
+      "print \"inserccion:\",time.time()-t0", 
+      "l1=l[:]", 
+      "t0=time.time()", 
+      "ord_burbuja(l1)", 
+      "print \"burbuja:\",time.time()-t0", 
+      "l1=l[:]", 
+      "t0=time.time()", 
+      "ordena_mezcla(l1,0,len(l1)-1)", 
+      "print \"mezcla:\",time.time()-t0", 
+      "l1=l[:]", 
+      "t0=time.time()", 
+      "quicksort(l1,0,len(l1)-1)", 
+      "print \"quicksort:\",time.time()-t0"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "stream", 
+       "stream": "stdout", 
+       "text": [
+        "seleccion: 358.783027887", 
+        "inserccion:"
+       ]
+      }, 
+      {
+       "output_type": "stream", 
+       "stream": "stdout", 
+       "text": [
+        " 303.308477879", 
+        "burbuja:"
+       ]
+      }, 
+      {
+       "output_type": "stream", 
+       "stream": "stdout", 
+       "text": [
+        " 1609.74829292", 
+        "mezcla:"
+       ]
+      }, 
+      {
+       "output_type": "stream", 
+       "stream": "stdout", 
+       "text": [
+        " 0.77033996582", 
+        "quicksort:"
+       ]
+      }, 
+      {
+       "output_type": "stream", 
+       "stream": "stdout", 
+       "text": [
+        " 0.661063909531"
+       ]
+      }
+     ], 
+     "prompt_number": 32
     }, 
     {
      "cell_type": "code", 
