propuesta hoja6 crawler.py

--- a/practicas/practica4.tex
+++ b/practicas/practica4.tex
@@ -43,7 +43,7 @@
 
 \exercita{defs}{language-logo={Python}}
 \exercita{defs}{language={Python}}
-\exercita{defs}{doc-number={1},doc-titles?,bibliography?,history?,doc-title={Crea un índice de páginas web},doc-hint-style=auto}           
+\exercita{defs}{doc-number={1},doc-titles?,bibliography?,history?,doc-title={Implementando polinomios.},doc-hint-style=auto}           
 
 \begin{document}
 
@@ -53,7 +53,7 @@
 
 %\vspace*{1em}
 
-\exercita{load}{practicos.internet.indicePaginasWeb}[*]
+\exercita{load}{matematicas.algebra.polinomios.implementacion}[*]
  
 
 
@@ -65,7 +65,7 @@
 \vspace*{2em}
 
 
-\noindent \textbf{Fecha l\'imite de entrega:} Semana del 21 al 25  de Abril. 
+\noindent \textbf{Fecha l\'imite de entrega:} Semana del 14 al 20  de Abril. 
 
 
 \end{document}
