--- a/ejemplos/ipython-notebooks/NewtonFractal-Copy1.ipynb
+++ b/ejemplos/ipython-notebooks/NewtonFractal-Copy1.ipynb
@@ -208,7 +208,7 @@
      "input": [
       "import Image\n",
       "raices=[r0,r1,r2,r3]\n",
-      "fractal=newton_fractal(f,derf,raices,[(255,0,0),(0,255,0),(0,0,255),(255,0,255)],2,2,0.005)\n",
+      "fractal=newton_fractal(f,derf,[complex(0,1),complex(],[(255,0,0),(0,255,0),(0,0,255),(255,0,255)],2,2,0.005)\n",
       "fractal.show()"
      ],
      "language": "python",
