--- a/Búsquedas.ipynb
+++ b/Búsquedas.ipynb
@@ -691,7 +691,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "def pivotar(l,i,j):", 
       "    #recoloca los elementos de l entre i..j", 
@@ -700,6 +700,10 @@
       "    e=l[i]", 
       "    p=i", 
       "    b=j", 
+      "    #lo que sigue se cumple antes de entrar y al terminar cada paso del bucle:", 
+      "    #l[p]=e", 
+      "    #para i<=k<p l[k]<=e", 
+      "    #para b<k<=j l[k]>e", 
       "    while b>p:", 
       "        if l[p+1]>e:", 
       "            l[p+1],l[b]=l[b],l[p+1]", 
