más métodos en los racionales

--- a/racionales.ipynb
+++ b/racionales.ipynb
@@ -8,7 +8,7 @@
    "cells": [
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "def mcd(a,b):", 
       "    if b==0:", 
@@ -36,9 +36,20 @@
       "    ", 
       "    def __add__(self,otro):", 
       "        if isinstance(otro,racional):", 
-      "            return racional(self.num*otro.den+self.den*otro.num,self.num*self.den)", 
+      "            return racional(self.num*otro.den+self.den*otro.num,self.den*otro.den)", 
       "        else:", 
       "            raise Exception('No puedo sumar el racional '+str(self)+' y el '+str(type(otro))+' '+str(otro))", 
+      "    def __mul__(self,otro):", 
+      "        if isinstance(otro,racional):", 
+      "            return racional(self.num*otro.num,self.den*otro.den)", 
+      "        else:", 
+      "            raise Exception('No puedo multiplicar el racional '+str(self)+' y el '+str(type(otro))+' '+str(otro))", 
+      "    def __div__(self,otro):", 
+      "        if isinstance(otro,racional):", 
+      "            return racional(self.num*otro.den,self.den*otro.num)", 
+      "        else:", 
+      "            raise Exception('No puedo multiplicar el racional '+str(self)+' y el '+str(type(otro))+' '+str(otro))", 
+      "        ", 
       "    def __eq__(self,otro):", 
       "        if isinstance(otro,racional):", 
       "            return self.num*otro.den-self.den*otro.num==0", 
@@ -48,7 +59,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 18
+     "prompt_number": 13
     }, 
     {
      "cell_type": "code", 
@@ -58,31 +69,41 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 19
+     "prompt_number": 14
     }, 
     {
      "cell_type": "code", 
      "collapsed": false, 
      "input": [
-      "r==racional(3,6)"
+      "s=racional(3,6)"
+     ], 
+     "language": "python", 
+     "outputs": [], 
+     "prompt_number": 15
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "r==s"
      ], 
      "language": "python", 
      "outputs": [
       {
        "output_type": "pyout", 
-       "prompt_number": 10, 
+       "prompt_number": 16, 
        "text": [
         "False"
        ]
       }
      ], 
-     "prompt_number": 10
+     "prompt_number": 16
     }, 
     {
      "cell_type": "code", 
      "collapsed": false, 
      "input": [
-      "print r+2"
+      "print r*s"
      ], 
      "language": "python", 
      "outputs": [
@@ -90,21 +111,11 @@
        "output_type": "stream", 
        "stream": "stdout", 
        "text": [
-        "3/1"
+        "1/2"
        ]
       }
      ], 
-     "prompt_number": 20
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": true, 
-     "input": [
-      "a=type(2)"
-     ], 
-     "language": "python", 
-     "outputs": [], 
-     "prompt_number": 27
+     "prompt_number": 18
     }, 
     {
      "cell_type": "code", 
