--- a/racionales.ipynb
+++ b/racionales.ipynb
@@ -46,58 +46,79 @@
       "            raise Exception('No puedo multiplicar el racional '+str(self)+' y el '+str(type(otro))+' '+str(otro))", 
       "    def __div__(self,otro):", 
       "        if isinstance(otro,racional):", 
-      "            return racional(self.num*otro.den,self.den*otro.num)", 
+      "            if otro==0:", 
+      "                raise Exception('division por cero')", 
+      "            else:", 
+      "                return racional(self.num*otro.den,self.den*otro.num)", 
       "        else:", 
-      "            raise Exception('No puedo multiplicar el racional '+str(self)+' y el '+str(type(otro))+' '+str(otro))", 
+      "            raise Exception('No puedo dividir el racional '+str(self)+' y el '+str(type(otro))+' '+str(otro))", 
       "        ", 
       "    def __eq__(self,otro):", 
       "        if isinstance(otro,racional):", 
       "            return self.num*otro.den-self.den*otro.num==0", 
+      "        elif isinstance(otro,int):", 
+      "            return self==racional(otro,1)", 
+      "        else:", 
+      "            raise Exception('No puedo comparar el racional '+str(self)+' y el '+str(type(otro))+' '+str(otro))", 
+      "    def __lt__(self,otro):", 
+      "        if isinstance(otro,racional):", 
+      "            return (self.num*otro.den-self.den*otro.num)<0", 
+      "        elif isinstance(otro,int):", 
+      "            return self<racional(otro,1)", 
       "        else:", 
       "            raise Exception('No puedo comparar el racional '+str(self)+' y el '+str(type(otro))+' '+str(otro))", 
       "        "
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 13
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": true, 
-     "input": [
-      "r=racional(23,23)"
-     ], 
-     "language": "python", 
-     "outputs": [], 
-     "prompt_number": 14
+     "prompt_number": 67
     }, 
     {
      "cell_type": "code", 
      "collapsed": false, 
      "input": [
-      "s=racional(3,6)"
+      "r=racional(0,1)"
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 15
+     "prompt_number": 68
     }, 
     {
      "cell_type": "code", 
      "collapsed": false, 
      "input": [
-      "r==s"
+      "r<-3"
      ], 
      "language": "python", 
      "outputs": [
       {
        "output_type": "pyout", 
-       "prompt_number": 16, 
+       "prompt_number": 71, 
        "text": [
         "False"
        ]
       }
      ], 
-     "prompt_number": 16
+     "prompt_number": 71
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "print ", 
+      "r"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "stream", 
+       "stream": "stdout", 
+       "text": [
+        "0/1"
+       ]
+      }
+     ], 
+     "prompt_number": 60
     }, 
     {
      "cell_type": "code", 
@@ -108,14 +129,17 @@
      "language": "python", 
      "outputs": [
       {
-       "output_type": "stream", 
-       "stream": "stdout", 
-       "text": [
-        "1/2"
+       "ename": "NameError", 
+       "evalue": "name 's' is not defined", 
+       "output_type": "pyerr", 
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)", 
+        "\u001b[0;32m/home/jcarmona/ejemplos-noteboks/ipython-notebooks/<ipython-input-61-b6d39302645b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m", 
+        "\u001b[0;31mNameError\u001b[0m: name 's' is not defined"
        ]
       }
      ], 
-     "prompt_number": 18
+     "prompt_number": 61
     }, 
     {
      "cell_type": "code", 
